// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Password /> should call onHandleSubmit() when submitted value is long enough 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Change Password
    </h2>
    <p>
      Last changed 
      <RelativeTime
        em={true}
        time="2018-02-14T17:12:00.000000Z"
      />
    </p>
  </Box__BoxGroupHeader>
  <Box__BoxGroupSection
    as="form"
    onSubmit={[Function]}
  >
    <InputGroup
      error=""
    >
      <Input__InputContainer>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value="long_password"
        />
        <Input__InputError />
      </Input__InputContainer>
    </InputGroup>
    <Password__PasswordFooter>
      <Checkbox
        checked={false}
        label="Force user to reset password on next login"
        onClick={[Function]}
      />
      <SaveButton />
    </Password__PasswordFooter>
  </Box__BoxGroupSection>
</Box__BoxGroup>
`;

exports[`<Password /> should call onHandleSubmit() when submitted value is long enough 2`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Change Password
    </h2>
    <p>
      Last changed 
      <RelativeTime
        em={true}
        time="2018-02-14T17:12:00.000000Z"
      />
    </p>
  </Box__BoxGroupHeader>
  <Box__BoxGroupSection
    as="form"
    onSubmit={[Function]}
  >
    <InputGroup
      error=""
    >
      <Input__InputContainer>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value=""
        />
        <Input__InputError />
      </Input__InputContainer>
    </InputGroup>
    <Password__PasswordFooter>
      <Checkbox
        checked={false}
        label="Force user to reset password on next login"
        onClick={[Function]}
      />
      <SaveButton />
    </Password__PasswordFooter>
  </Box__BoxGroupSection>
</Box__BoxGroup>
`;

exports[`<Password /> should render 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Change Password
    </h2>
    <p>
      Last changed 
      <RelativeTime
        em={true}
        time="2018-02-14T17:12:00.000000Z"
      />
    </p>
  </Box__BoxGroupHeader>
  <Box__BoxGroupSection
    as="form"
    onSubmit={[Function]}
  >
    <InputGroup
      error=""
    >
      <Input__InputContainer>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value=""
        />
        <Input__InputError />
      </Input__InputContainer>
    </InputGroup>
    <Password__PasswordFooter>
      <Checkbox
        checked={false}
        label="Force user to reset password on next login"
        onClick={[Function]}
      />
      <SaveButton />
    </Password__PasswordFooter>
  </Box__BoxGroupSection>
</Box__BoxGroup>
`;

exports[`<Password /> should render when PasswordInput value has changed 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Change Password
    </h2>
    <p>
      Last changed 
      <RelativeTime
        em={true}
        time="2018-02-14T17:12:00.000000Z"
      />
    </p>
  </Box__BoxGroupHeader>
  <Box__BoxGroupSection
    as="form"
    onSubmit={[Function]}
  >
    <InputGroup
      error=""
    >
      <Input__InputContainer>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value="bar"
        />
        <Input__InputError />
      </Input__InputContainer>
    </InputGroup>
    <Password__PasswordFooter>
      <Checkbox
        checked={false}
        label="Force user to reset password on next login"
        onClick={[Function]}
      />
      <SaveButton />
    </Password__PasswordFooter>
  </Box__BoxGroupSection>
</Box__BoxGroup>
`;
